tekton/40-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tekton-hub-api
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "tekton-poc-hub"
    networking.gke.io/managed-certificates: "tekton-poc-hub-cert"
    networking.gke.io/v1beta1.FrontendConfig: "tekton-frontend-config"
spec:
  rules:
  - host: poc-tekton-api.prow.build.kyma-project.io
    http:
      paths:
      - backend:
          service:
            name: tekton-hub-api
            port:
              number: 8000
        path: /*
        pathType: ImplementationSpecific
  - host: poc-tekton-auth.prow.build.kyma-project.io
    http:
      paths:
      - backend:
          service:
            name: tekton-hub-api
            port:
              number: 4200
        path: /*
        pathType: ImplementationSpecific
  - host: poc-tekton-hub.prow.build.kyma-project.io
    http:
      paths:
      - backend:
          service:
            name: tekton-hub-ui
            port:
              number: 8080
        path: /*
        pathType: ImplementationSpecific
